# disag_vcc

./: .gitignore  CMakeLists.txt  README.md  Vagrantfile  collect_metrics.py  docker-compose-ganache.yml  docker-compose.yaml  docker-composeMonitoring.yaml  docker-composeMonitoring.yml  docker-composeSat.yaml  docker-compose_gNB.yaml  docker-compose_with_F1_E1_split.yaml  docker-compose_with_F1_split.yaml  docker-compose_without_split.yaml  enter_container.sh  extract_container_data.py  f1.ipynb  f1_e1.ipynb  installgtp5g.sh  monitoring_notes  tasks.sh  traffic.sh
CAdvisor/: Dockerfile
LSTM_data/: gNBDU_cpu_usage_F1_split.csv  gNB_DU_memory_usage_F1_split.tsv  memory_usagegNBDU.csv  rfsim5g-oai-du_cpu_usage.csv  rfsim5g-oai-du_memory_usage.csv
Node_Exporter/: Dockerfile
ci-scripts/: cls_containerize.py  cls_oaicitest.py  main.py  xml_class_list.yml
cmake_targets/: build_oai
configcore/: amfcfg.yaml  smf.sh  smfcfg.yaml  uereg.yaml  uerouting.yaml  upf-iptables.sh  upfcfg.yaml
configcore_v3.1.1/: amfcfg.yaml  amfcfg1.yaml  smfcfg.yaml  uereg.yaml  uerouting.yaml  upfcfg.yaml
configcore_v3.3.0/: amfcfg.yaml  nrfcfg.yaml  smfcfg.yaml  uereg.yaml  upfcfg.yaml
configran/: ue.sh
doc/: Aerial_FAPI_Split_Tutorial.md  BUILD.md  Doxyfile  FEATURE_SET.md  NR_SA_Tutorial_COTS_UE.md  NR_SA_Tutorial_OAI_nrUE.md  ORAN_FHI7.2_Tutorial.md  README.md  RUNMODEM.md  (+2 more)
nfapi/open-nFAPI/fapi/: CMakeLists.txt
nfapi/open-nFAPI/fapi/inc/: nr_fapi.h  nr_fapi_p5.h  nr_fapi_p5_utils.h
nfapi/open-nFAPI/fapi/src/: nr_fapi_p5.c  nr_fapi_p5_utils.c
nfapi/tests/p5/: CMakeLists.txt
(+254 files in other folders)
